src/test/ui/partialeq_help.stderr
error[E0277]: can't compare `&T` with `T`
  --> $DIR/partialeq_help.rs:2:7
   |
LL |     a == b;
   |       ^^ no implementation for `&T == T`
   |
   = help: the trait `PartialEq<T>` is not implemented for `&T`
   = help: the following other types implement trait `PartialEq<Rhs>`:
             <&A as PartialEq<&B>>
             <&A as PartialEq<&mut B>>
             <&mut A as PartialEq<&B>>
             <&mut A as PartialEq<&mut B>>
             <*const T as PartialEq>
             <*mut T as PartialEq>

error[E0277]: can't compare `&T` with `T`
  --> $DIR/partialeq_help.rs:6:7
   |
LL |     a == b;
   |       ^^ no implementation for `&T == T`
   |
   = help: the trait `PartialEq<T>` is not implemented for `&T`
   = help: the following other types implement trait `PartialEq<Rhs>`:
             <&A as PartialEq<&B>>
             <&A as PartialEq<&mut B>>
             <&mut A as PartialEq<&B>>
             <&mut A as PartialEq<&mut B>>
             <*const T as PartialEq>
             <*mut T as PartialEq>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
